Add clear all button

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
         <h2>Tasks</h2>
         <div class="underline"></div>
       </div>
+      <button type="button" class="clear">Clear</button>
       <ul class="tasks"></ul>
     </div>
     <button type="button" class="create-task">New Task</button>
