Make clock tick

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <button type="button" class="long">Long</button>
         <button type="button" class="next">Next</button>
       </div>
-      <div class="clock">45:00</div>
+      <div class="clock"><span class="minutes">45</span>:<span class="seconds">00</span></div>
     </div>
     <div class="task-list">
       <div class="tasks-title-wrapper">
