Add start-stop btn

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <button type="button" class="next">Next</button>
       </div>
       <div class="clock"><span class="minutes">45</span>:<span class="seconds">00</span></div>
+      <div class="start"><button type="button">Start</button></div>
     </div>
     <div class="task-list">
       <div class="tasks-title-wrapper">
