--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Pomodoro Timer</h1>
-    <button type="button" class="menu-btn"      ><img src="./img/menu.svg" width="45px" height="45px"></button> 
+    <button type="button" class="menu-btn"><img src="./img/menu.svg" width="45px" height="45px"></button> 
   </header>
   <main>
     <div class="timer">
@@ -42,7 +42,7 @@
     </div>
     <div class="done-finish">
       <div class="done-wrapper">Done: <span class="tomatoes-done">6</span>/<span class="tomatoes-to-do">20</span> tomatoes (<span class="done-percent">30</span>%)</div>
-      <div class="finish-wrapper">Finish: <span class="when-finish">01:12</span> (<span class="how-long-hours">12</span>h <span class="how-long-minutes">50</span>m)</div>
+      <!-- <div class="finish-wrapper">Finish: <span class="when-finish">01:12</span> (<span class="how-long-hours">12</span>h <span class="how-long-minutes">50</span>m)</div> -->
     </div>
   </footer>
 </body>
